moe_ticket16 course/format/moetabs fix summery p tag on mobile

--- a/course/format/moetabs/styles.css
+++ b/course/format/moetabs/styles.css
@@ -323,6 +323,7 @@
 .format-moetabs li:not(#section-0) .summary p {
 	margin-right: 12%;
 	margin-top: 2%;
+	height:170px;
 	
 }
 
